role validation
